2000-07-26  DJ Delorie  <dj@cygnus.com>

	* fhandler_console.cc (fhandler_console::read): Explicitly set cursor
	to make it visible while waiting in WaitForMultipleObjects.

Wed Jul 26 10:59:00 2000  Corinna Vinschen <corinna@vinschen.de>

	* passwd.cc: Change name of passwd_in_memory_p to passwd_state.
	Change type to enum. Change storage class to static. Adjust comments.
	(read_etc_passwd): Set passwd_state to different values when loaded
	from file in contrast to being emulated.
	(search_for): Return default passwd entry if passwd is emulated or
	it's a request for the current user. Otherwise return NULL.

Tue Jul 25 21:50:42 2000  Christopher Faylor <cgf@cygnus.com>

	* syscalls.cc (statfs): Use path_conv method to convert input path.

Tue Jul 25 21:40:51 2000  Christopher Faylor <cgf@cygnus.com>

	* syscalls.cc (_link): Avoid extraneous call to
	cygwin_conv_to_win32_path.

Tue Jul 25 21:11:15 2000  Christopher Faylor <cgf@cygnus.com>

	* environ.cc (_addenv): New function.  Subsumes functionality of
	putenv/setenv.  Does not allocate space for putenv case.
	(putenv): Use _addenv to add a value to the environment.
	(setenv): Ditto.
	(environ_init): Don't malloc space for each entry in the environment
	table.  Just use the space from GetEnvironmentStrings.
	(posify): Don't free the src argument since it is no longer malloced.

Mon Jul 24 21:10:00 2000  Corinna Vinschen <corinna@vinschen.de>

	* syscalls.cc (_link): Corrected previous patch.

Mon Jul 24 13:26:00 2000  Corinna Vinschen <corinna@vinschen.de>

	* fhandler.h (class fhandler_dev_random): Add members for managing
	pseudo randomness.
	* fhandler_random.cc: Rearrange. Use pseudo random number generator
	as entropy source if system entropy isn't available and if device is
	used as /dev/urandom. Allow initializing device by calling write().

Sun Jul 23 23:11:00 2000  Corinna Vinschen <corinna@vinschen.de>

	* fhandler.h: Add comment.

Sun Jul 23 20:00:00 2000  Corinna Vinschen <corinna@vinschen.de>
